add dependency on ament_cmake_environment

--- a/ament_cpplint/CMakeLists.txt
+++ b/ament_cpplint/CMakeLists.txt
@@ -3,9 +3,12 @@ cmake_minimum_required(VERSION 2.8.3)
 project(ament_cpplint)
 
 find_package(ament_cmake_core REQUIRED)
+find_package(ament_cmake_environment REQUIRED)
 find_package(ament_cmake_index REQUIRED)
 find_package(ament_cmake_python REQUIRED)
 find_package(ament_cmake_test REQUIRED)
+
+ament_python_install_package(${PROJECT_NAME})
 
 ament_package(
   CONFIG_EXTRAS "ament_cpplint-extras.cmake"
@@ -19,4 +22,3 @@ install(
   DIRECTORY cmake
   DESTINATION share/${PROJECT_NAME}
 )
-ament_python_install_package(${PROJECT_NAME})
