--- a/ament_cpplint/package.xml
+++ b/ament_cpplint/package.xml
@@ -12,4 +12,8 @@
   <buildtool_depend>ament_cmake_test</buildtool_depend>
 
   <buildtool_export_depend>ament_cmake_test</buildtool_export_depend>
+
+  <test_depend>ament_lint_cmake</test_depend>
+  <test_depend>ament_pep8</test_depend>
+  <test_depend>ament_pyflakes</test_depend>
 </package>
