refactor ament_cpplint into Python and CMake package

--- a/ament_cpplint/package.xml
+++ b/ament_cpplint/package.xml
@@ -2,22 +2,19 @@
 <package format="2">
   <name>ament_cpplint</name>
   <version>0.0.0</version>
-  <description>The ability to check code against the Google style conventions using cpplint in the ament buildsystem.</description>
+  <description>
+    The ability to check code against the Google style conventions using
+    cpplint and generate xUnit test result files.</description>
   <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
   <license>Apache License 2.0</license>
   <license>BSD</license>
 
-  <buildtool_depend>ament_cmake_core</buildtool_depend>
-  <buildtool_depend>ament_cmake_python</buildtool_depend>
-  <buildtool_depend>ament_cmake_test</buildtool_depend>
-
-  <buildtool_export_depend>ament_cmake_test</buildtool_export_depend>
-
-  <test_depend>ament_cmake_lint_cmake</test_depend>
-  <test_depend>ament_cmake_pep8</test_depend>
-  <test_depend>ament_cmake_pyflakes</test_depend>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_pep8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>ament_pyflakes</test_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
