--- a/ament_cpplint/package.xml
+++ b/ament_cpplint/package.xml
@@ -11,9 +11,8 @@
   <license>BSD</license>
 
   <test_depend>ament_copyright</test_depend>
-  <test_depend>ament_pep8</test_depend>
+  <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
-  <test_depend>ament_pyflakes</test_depend>
 
   <export>
     <build_type>ament_python</build_type>
