Add Audrow as a maintainer (#294)
Signed-off-by: Audrow Nash <audrow.nash@gmail.com>

--- a/ament_cpplint/package.xml
+++ b/ament_cpplint/package.xml
@@ -7,6 +7,7 @@
     The ability to check code against the Google style conventions using
     cpplint and generate xUnit test result files.</description>
   <maintainer email="clairewang@openrobotics.org">Claire Wang</maintainer>
+  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>
   <license>Apache License 2.0</license>
   <license>BSD</license>
 
