--- a/ament_cmake_flake8/package.xml
+++ b/ament_cmake_flake8/package.xml
@@ -8,6 +8,7 @@
     with flake8.
   </description>
   <maintainer email="clairewang@openrobotics.org">Claire Wang</maintainer>
+  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>
   <license>Apache License 2.0</license>
   <author email="dhood@osrfoundation.org">D. Hood</author>
 
